Auth for grocery items

--- a/api-new/package.json
+++ b/api-new/package.json
@@ -16,7 +16,9 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/jest/bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:generate:client": "npx prisma generate",
+    "prisma:migrate:deploy": "npx prisma migrate deploy"
   },
   "engines": {
     "npm": ">=8.0.0",
@@ -26,10 +28,12 @@
     "@nestjs/common": "^10.3.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.4",
     "@prisma/client": "^6.0.1",
     "bcrypt": "^5.1.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -78,5 +82,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.cjs"
   }
 }
