--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -1,14 +1,4 @@
 {
-  "semi": false,
-  "bracketSpacing": true,
-  "endOfLine": "lf",
-  "printWidth": 120,
-  "quoteProps": "as-needed",
-  "bracketSameLine": false,
-  "requirePragma": false,
   "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "useTabs": false,
-  "arrowParens": "avoid"
+  "trailingComma": "all"
 }
