--- a/api/.prettierrc
+++ b/api/.prettierrc
@@ -1,4 +1,14 @@
 {
+  "semi": false,
+  "bracketSpacing": true,
+  "endOfLine": "lf",
+  "printWidth": 120,
+  "quoteProps": "as-needed",
+  "bracketSameLine": false,
+  "requirePragma": false,
   "singleQuote": true,
-  "trailingComma": "all"
+  "tabWidth": 2,
+  "trailingComma": "all",
+  "useTabs": false,
+  "arrowParens": "avoid"
 }
