--- a/api/package.json
+++ b/api/package.json
@@ -25,7 +25,8 @@
     "node": ">=16.0.0"
   },
   "dependencies": {
-    "@nestjs/common": "^10.3.2",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.4.4",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
@@ -37,9 +38,9 @@
     "class-validator": "^0.14.1",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
-    "prisma": "^6.0.1",
-    "reflect-metadata": "^0.2.1",
-    "rxjs": "^7.8.1"
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
@@ -58,6 +59,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "^3.2.5",
+    "prisma": "^6.0.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
